@@ -584,6 +584,79 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testDigitsInRussianCharset
+specifier|public
+name|void
+name|testDigitsInRussianCharset
+parameter_list|()
+block|{
+name|Reader
+name|reader
+init|=
+operator|new
+name|StringReader
+argument_list|(
+literal|"text 1000"
+argument_list|)
+decl_stmt|;
+name|RussianAnalyzer
+name|ra
+init|=
+operator|new
+name|RussianAnalyzer
+argument_list|()
+decl_stmt|;
+name|TokenStream
+name|stream
+init|=
+name|ra
+operator|.
+name|tokenStream
+argument_list|(
+literal|""
+argument_list|,
+name|reader
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|assertEquals
+argument_list|(
+literal|"text"
+argument_list|,
+name|stream
+operator|.
+name|next
+argument_list|()
+operator|.
+name|termText
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"RussianAnalyzer's tokenizer skips numbers from input text"
+argument_list|,
+name|stream
+operator|.
+name|next
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|fail
+argument_list|(
+literal|"unexpected IOException"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 end_class
 
